@@ -2,6 +2,7 @@
 
 import datetime
 from decimal import Decimal
+import warnings
 
 try:
     import unittest2 as unittest
@@ -19,6 +20,7 @@ from agate.columns import Column
 from agate.data_types import *
 from agate.exceptions import *
 from agate.rows import Row
+from agate.warnings import NullCalculationWarning
 
 class TestSimpleAggregation(unittest.TestCase):
     def setUp(self):
@@ -202,8 +204,9 @@ class TestNumberAggregation(unittest.TestCase):
         self.assertEqual(self.table.columns['two'].aggregate(Max()), Decimal('4.1'))
 
     def test_mean(self):
-        with self.assertRaises(NullCalculationError):
+        with warnings.catch_warnings(record=True) as w:
             self.table.columns['one'].aggregate(Mean())
+            self.assertIs(w[-1].category, NullCalculationWarning)
 
         with self.assertRaises(DataTypeError):
             self.table.columns['three'].aggregate(Mean())
@@ -211,8 +214,9 @@ class TestNumberAggregation(unittest.TestCase):
         self.assertEqual(self.table.columns['two'].aggregate(Mean()), Decimal('3.2825'))
 
     def test_median(self):
-        with self.assertRaises(NullCalculationError):
+        with warnings.catch_warnings(record=True) as w:
             self.table.columns['one'].aggregate(Median())
+            self.assertIs(w[-1].category, NullCalculationWarning)
 
         with self.assertRaises(DataTypeError):
             self.table.columns['three'].aggregate(Median())
@@ -220,8 +224,9 @@ class TestNumberAggregation(unittest.TestCase):
         self.assertEqual(self.table.columns['two'].aggregate(Median()), Decimal('3.42'))
 
     def test_mode(self):
-        with self.assertRaises(NullCalculationError):
+        with warnings.catch_warnings(record=True) as w:
             self.table.columns['one'].aggregate(Mode())
+            self.assertIs(w[-1].category, NullCalculationWarning)
 
         with self.assertRaises(DataTypeError):
             self.table.columns['three'].aggregate(Mode())
@@ -229,8 +234,9 @@ class TestNumberAggregation(unittest.TestCase):
         self.assertEqual(self.table.columns['two'].aggregate(Mode()), Decimal('3.42'))
 
     def test_iqr(self):
-        with self.assertRaises(NullCalculationError):
+        with warnings.catch_warnings(record=True) as w:
             self.table.columns['one'].aggregate(IQR())
+            self.assertIs(w[-1].category, NullCalculationWarning)
 
         with self.assertRaises(DataTypeError):
             self.table.columns['three'].aggregate(IQR())
@@ -238,8 +244,9 @@ class TestNumberAggregation(unittest.TestCase):
         self.assertEqual(self.table.columns['two'].aggregate(IQR()), Decimal('0.955'))
 
     def test_variance(self):
-        with self.assertRaises(NullCalculationError):
+        with warnings.catch_warnings(record=True) as w:
             self.table.columns['one'].aggregate(Variance())
+            self.assertIs(w[-1].category, NullCalculationWarning)
 
         with self.assertRaises(DataTypeError):
             self.table.columns['three'].aggregate(Variance())
@@ -247,8 +254,9 @@ class TestNumberAggregation(unittest.TestCase):
         self.assertEqual(self.table.columns['two'].aggregate(Variance()).quantize(Decimal('0.0001')), Decimal('0.6332'))
 
     def test_population_variance(self):
-        with self.assertRaises(NullCalculationError):
+        with warnings.catch_warnings(record=True) as w:
             self.table.columns['one'].aggregate(PopulationVariance())
+            self.assertIs(w[-1].category, NullCalculationWarning)
 
         with self.assertRaises(DataTypeError):
             self.table.columns['three'].aggregate(PopulationVariance())
@@ -256,8 +264,9 @@ class TestNumberAggregation(unittest.TestCase):
         self.assertEqual(self.table.columns['two'].aggregate(PopulationVariance()).quantize(Decimal('0.0001')), Decimal('0.4749'))
 
     def test_stdev(self):
-        with self.assertRaises(NullCalculationError):
+        with warnings.catch_warnings(record=True) as w:
             self.table.columns['one'].aggregate(StDev())
+            self.assertIs(w[-1].category, NullCalculationWarning)
 
         with self.assertRaises(DataTypeError):
             self.table.columns['three'].aggregate(StDev())
@@ -265,8 +274,9 @@ class TestNumberAggregation(unittest.TestCase):
         self.assertAlmostEqual(self.table.columns['two'].aggregate(StDev()).quantize(Decimal('0.0001')), Decimal('0.7958'))
 
     def test_population_stdev(self):
-        with self.assertRaises(NullCalculationError):
+        with warnings.catch_warnings(record=True) as w:
             self.table.columns['one'].aggregate(PopulationStDev())
+            self.assertIs(w[-1].category, NullCalculationWarning)
 
         with self.assertRaises(DataTypeError):
             self.table.columns['three'].aggregate(PopulationStDev())
@@ -274,8 +284,9 @@ class TestNumberAggregation(unittest.TestCase):
         self.assertAlmostEqual(self.table.columns['two'].aggregate(PopulationStDev()).quantize(Decimal('0.0001')), Decimal('0.6891'))
 
     def test_mad(self):
-        with self.assertRaises(NullCalculationError):
+        with warnings.catch_warnings(record=True) as w:
             self.table.columns['one'].aggregate(MAD())
+            self.assertIs(w[-1].category, NullCalculationWarning)
 
         with self.assertRaises(DataTypeError):
             self.table.columns['three'].aggregate(MAD())
@@ -283,8 +294,9 @@ class TestNumberAggregation(unittest.TestCase):
         self.assertAlmostEqual(self.table.columns['two'].aggregate(MAD()), Decimal('0'))
 
     def test_percentiles(self):
-        with self.assertRaises(NullCalculationError):
+        with warnings.catch_warnings(record=True) as w:
             self.table.columns['one'].aggregate(Percentiles())
+            self.assertIs(w[-1].category, NullCalculationWarning)
 
         rows = [(n,) for n in range(1, 1001)]
 
@@ -321,8 +333,9 @@ class TestNumberAggregation(unittest.TestCase):
         CDF quartile tests from:
         http://www.amstat.org/publications/jse/v14n3/langford.html#Parzen1979
         """
-        with self.assertRaises(NullCalculationError):
+        with warnings.catch_warnings(record=True) as w:
             self.table.columns['one'].aggregate(Quartiles())
+            self.assertIs(w[-1].category, NullCalculationWarning)
 
         # N = 4
         rows = [(n,) for n in [1, 2, 3, 4]]
@@ -428,8 +441,9 @@ class TestNumberAggregation(unittest.TestCase):
             quartiles.locate(11)
 
     def test_quintiles(self):
-        with self.assertRaises(NullCalculationError):
+        with warnings.catch_warnings(record=True) as w:
             self.table.columns['one'].aggregate(Quintiles())
+            self.assertIs(w[-1].category, NullCalculationWarning)
 
         rows = [(n,) for n in range(1, 1001)]
 
@@ -438,8 +452,9 @@ class TestNumberAggregation(unittest.TestCase):
         table.columns['ints'].aggregate(Quintiles())
 
     def test_deciles(self):
-        with self.assertRaises(NullCalculationError):
+        with warnings.catch_warnings(record=True) as w:
             self.table.columns['one'].aggregate(Quintiles())
+            self.assertIs(w[-1].category, NullCalculationWarning)
 
         rows = [(n,) for n in range(1, 1001)]
 
