@@ -1,6 +1,8 @@
 0.12.0
 ------
 
+* NullCalculationError is now a warning instead of an error. (#311)
+* TableSet is now a subclass of MappedSequence.
 * Rows and Columns are now subclasses of MappedSequence.
 * Column.get_data_without_nulls() renamed Column.values_without_nulls().
 * Column.get_data_sorted() renamed Column.values_sorted().
